{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 152,
  "lineage": "46a61c99-1336-d8d8-207d-7b530e16beb3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b063a68593ecee60",
            "arn": "arn:aws:ec2:us-east-2:058664347626:elastic-ip/eipalloc-0b063a68593ecee60",
            "association_id": "eipassoc-029dd9a6c3d9cd158",
            "domain": "vpc",
            "id": "eipalloc-0b063a68593ecee60",
            "network_border_group": "us-east-2",
            "network_interface": "eni-00956d7eb50b6d84b",
            "private_dns": "ip-10-0-1-165.us-east-2.compute.internal",
            "private_ip": "10.0.1.165",
            "public_dns": "ec2-3-140-21-142.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.21.142",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "fall-redblueteam-nat-eip"
            },
            "tags_all": {
              "Name": "fall-redblueteam-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "internal-box",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09553c0d21e89b0bf",
            "arn": "arn:aws:ec2:us-east-2:058664347626:instance/i-007177f9de9f63cfb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-007177f9de9f63cfb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntu-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-062b9a83bda612578",
            "private_dns": "ip-10-0-2-196.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cb4a17c9eae8bcf9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0e13e0c8154598935"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d5d78441ef1fbad",
            "tags": {
              "Name": "fall-redblueteam-internal-box"
            },
            "tags_all": {
              "Name": "fall-redblueteam-internal-box"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e13e0c8154598935"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.dmz_web_ssh",
            "aws_security_group.internal_ssh_from_dmz",
            "aws_subnet.internal",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jumpbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09553c0d21e89b0bf",
            "arn": "arn:aws:ec2:us-east-2:058664347626:instance/i-031dfb76451a3ef9a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-031dfb76451a3ef9a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntu-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d5860884030e9885",
            "private_dns": "ip-10-0-1-133.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.133",
            "public_dns": "ec2-3-147-80-1.us-east-2.compute.amazonaws.com",
            "public_ip": "3.147.80.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-095b2dcc4900c20e6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-074afafc3e8ee7ea6",
            "tags": {
              "Name": "fall-redblueteam-jumpbox"
            },
            "tags_all": {
              "Name": "fall-redblueteam-jumpbox"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02147f1a2a52d56d3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.dmz_web_ssh",
            "aws_subnet.dmz",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09553c0d21e89b0bf",
            "arn": "arn:aws:ec2:us-east-2:058664347626:instance/i-08cccaed7f615710e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08cccaed7f615710e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntu-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09dcc942780e0ee00",
            "private_dns": "ip-10-0-1-137.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.137",
            "public_dns": "ec2-3-139-67-1.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.67.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-035ff8fa9d3ff2ca8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-074afafc3e8ee7ea6",
            "tags": {
              "Name": "fall-redblueteam-web"
            },
            "tags_all": {
              "Name": "fall-redblueteam-web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02147f1a2a52d56d3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.dmz_web_ssh",
            "aws_subnet.dmz",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058664347626:internet-gateway/igw-05cf8c5aa2142e615",
            "id": "igw-05cf8c5aa2142e615",
            "owner_id": "058664347626",
            "tags": {
              "Name": "fall-redblueteam-igw"
            },
            "tags_all": {
              "Name": "fall-redblueteam-igw"
            },
            "vpc_id": "vpc-0e3ab5b200920651b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b063a68593ecee60",
            "association_id": "eipassoc-029dd9a6c3d9cd158",
            "connectivity_type": "public",
            "id": "nat-0343756e88a4efe38",
            "network_interface_id": "eni-00956d7eb50b6d84b",
            "private_ip": "10.0.1.165",
            "public_ip": "3.140.21.142",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-074afafc3e8ee7ea6",
            "tags": {
              "Name": "fall-redblueteam-nat-gateway"
            },
            "tags_all": {
              "Name": "fall-redblueteam-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.dmz",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058664347626:route-table/rtb-05c9beea41d14aad5",
            "id": "rtb-05c9beea41d14aad5",
            "owner_id": "058664347626",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05cf8c5aa2142e615",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fall-redblueteam-dmz-rt"
            },
            "tags_all": {
              "Name": "fall-redblueteam-dmz-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3ab5b200920651b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058664347626:route-table/rtb-0d0322272be87427e",
            "id": "rtb-0d0322272be87427e",
            "owner_id": "058664347626",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0343756e88a4efe38",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fall-redblueteam-internal-rt"
            },
            "tags_all": {
              "Name": "fall-redblueteam-internal-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3ab5b200920651b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.dmz",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dmz_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e93b5817e3aeddd3",
            "route_table_id": "rtb-05c9beea41d14aad5",
            "subnet_id": "subnet-074afafc3e8ee7ea6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.dmz",
            "aws_subnet.dmz",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internal_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b274d86a82fc695",
            "route_table_id": "rtb-0d0322272be87427e",
            "subnet_id": "subnet-07d5d78441ef1fbad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.internal",
            "aws_subnet.dmz",
            "aws_subnet.internal",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dmz_web_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058664347626:security-group/sg-02147f1a2a52d56d3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02147f1a2a52d56d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fall-redblueteam-dmz-web-ssh",
            "name_prefix": "",
            "owner_id": "058664347626",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fall-redblueteam-dmz-web-ssh"
            },
            "tags_all": {
              "Name": "fall-redblueteam-dmz-web-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3ab5b200920651b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_ssh_from_dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058664347626:security-group/sg-0e13e0c8154598935",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e13e0c8154598935",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02147f1a2a52d56d3"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "fall-redblueteam-internal-ssh-from-dmz",
            "name_prefix": "",
            "owner_id": "058664347626",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fall-redblueteam-internal-ssh-from-dmz"
            },
            "tags_all": {
              "Name": "fall-redblueteam-internal-ssh-from-dmz"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3ab5b200920651b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.dmz_web_ssh",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058664347626:subnet/subnet-074afafc3e8ee7ea6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074afafc3e8ee7ea6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058664347626",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fall-redblueteam-dmz-subnet"
            },
            "tags_all": {
              "Name": "fall-redblueteam-dmz-subnet"
            },
            "vpc_id": "vpc-0e3ab5b200920651b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058664347626:subnet/subnet-07d5d78441ef1fbad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d5d78441ef1fbad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058664347626",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fall-redblueteam-internal-subnet"
            },
            "tags_all": {
              "Name": "fall-redblueteam-internal-subnet"
            },
            "vpc_id": "vpc-0e3ab5b200920651b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058664347626:vpc/vpc-0e3ab5b200920651b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-041693af18fc7e0ba",
            "default_route_table_id": "rtb-0c88b1640f2fc22c0",
            "default_security_group_id": "sg-02e81f994140eda5a",
            "dhcp_options_id": "dopt-07a0c8228bbde2a15",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3ab5b200920651b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c88b1640f2fc22c0",
            "owner_id": "058664347626",
            "tags": {
              "Name": "fall-redblueteam-vpc"
            },
            "tags_all": {
              "Name": "fall-redblueteam-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}